--- a/NewFirstevaluation/Frontend_Angular/src/app/jobdescription/jobdescription.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/jobdescription/jobdescription.component.html
@@ -65,6 +65,8 @@
             <div>{{jobDescriptionData?.jobDescription}}</div>
             <p class="fw-bolder d-inline">Job Vacancy: {{jobDescriptionData?.jobVacancy}}</p>
             <p class="fw-bolder">Salary: {{jobDescriptionData?.jobSalary}}</p>
+            <p class="fw-bolder">Job Location: {{jobDescriptionData?.jobLocation}}</p>
+
             <h2 class="display-4 fw-bold">Company Details</h2>
             <div class="display-6 fw-semibold">Company Description</div>
             <div>{{companyDescriptionData?.companyDescription}}</div>
