--- a/NewFirstevaluation/Frontend_Angular/src/app/components/grad-dash/grad-dash.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/grad-dash/grad-dash.component.css
@@ -141,16 +141,25 @@
 .table-responsive {
   max-height: 300px; /* Set your desired max-height */
   overflow-y: auto;
-  overflow-x: hidden;
-  margin-top: 10px;
+  overflow-x:hidden;
+  margin-top: 20px;
+  max-width: 900px;
   margin-right: 200px;
-
+  margin: auto;
+  
 }
 
 .table th, .table td {
   text-align: left;
   padding: 12px;
-  padding-left: 10px;
   border: 1px solid #ddd;
+ 
+}
+
+th {
+  top: 0;
+  position: sticky;
+  background: #e5d2f1;
+  color: black;
 }
 
