--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-search/job-search.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-search/job-search.component.html
@@ -16,12 +16,12 @@
           <!-- Home -->
           <!-- *ngIf="currentRoute !== '/home'" -->
           <li class="nav-item" >
-            <a class="nav-link" routerLink="/gradhome/{{roleIdString}}" routerLinkActive="active">Home</a>
+            <a class="nav-link"  (click)="home()" routerLinkActive="active">Home</a>
           </li>
 
 
           <li class="nav-item" >
-            <a class="nav-link"  *ngIf="roleIdString?.startsWith('GRAD')" routerLink="/gradmessage/{{roleIdString}}" routerLinkActive="active">Contact Us</a>
+            <a class="nav-link"  *ngIf="roleIdString?.startsWith('GRAD')" routerLink="/gradmessage/{{roleIdString}}" routerLinkActive="active">Contact Us/Notification</a>
           </li>
 
 
