--- a/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
@@ -38,7 +38,9 @@
             <a class="nav-link" (click)=jobsforyou()  routerLinkActive="active">Explore Jobs</a>
           </li>
 
-
+          <li class="nav-item" >
+            <a class="nav-link"  routerLink="/grad-status" >SOHAN CHECK HERE</a>
+          </li>
           <!-- Services -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
           <!-- <li class="nav-item">
