--- a/NewFirstevaluation/Frontend_Angular/src/app/components/scheduled/scheduled.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/scheduled/scheduled.component.html
@@ -3,13 +3,8 @@
 
   <h2> Scheduled</h2>
   <div class="mb-3">
-    <input
-      type="text"
-      class="form-control"
-      placeholder="Search by Applicant ID"
-      [(ngModel)]="searchTerm"
-      (change)="filterAppointments()"
-    />
+    <input type="text" class="form-control" placeholder="Search by Applicant ID" [(ngModel)]="searchTerm"
+      (change)="filterAppointments()" />
   </div>
 
   <div class="table-responsive">
@@ -26,53 +21,53 @@
           <td>{{ student.jobSeeker.fullName }}</td>
           <td>{{ student.jobSeeker.email }}</td>
           <td>
-            <button class="btn btn-primary" (click)="infobutton(student)" >MoreInfo</button>
+            <button class="btn btn-primary" (click)="infobutton(student)">MoreInfo</button>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
 
-<!-- Simple Modal -->
-<div class="modal" *ngIf="flag==true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Graduate Details</h5>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-        <p class="col-3"><strong>Appointment ID:</strong> {{ selectedAppoint.applicantId }}</p>
-        <p class="col-3"><strong>Name :</strong> {{ selectedAppoint.jobSeeker.fullName }}</p>
-        <p class="col-3"><strong>Email :</strong> {{ selectedAppoint.jobSeeker.email }}</p>
+  <!-- Simple Modal -->
+  <div class="modal" *ngIf="flag==true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Graduate Details</h5>
         </div>
-        <div class="row">
-        <p class="col-3"><strong>Phone:</strong> {{ selectedAppoint.jobSeeker.phone }}</p>
-        <p class="col-3"><strong>YearOfPassing:</strong> {{ selectedAppoint.jobSeeker.yearOfPassing}}</p>
-        <p class="col-3"><strong>Cgpa:</strong> {{ selectedAppoint.jobSeeker.cgpa }}</p>
+        <div class="modal-body">
+          <div class="row">
+            <p class="col-3"><strong>Appointment ID:</strong> {{ selectedAppoint.applicantId }}</p>
+            <p class="col-3"><strong>Name :</strong> {{ selectedAppoint.jobSeeker.fullName }}</p>
+            <p class="col-3"><strong>Email :</strong> {{ selectedAppoint.jobSeeker.email }}</p>
+          </div>
+          <div class="row">
+            <p class="col-3"><strong>Phone:</strong> {{ selectedAppoint.jobSeeker.phone }}</p>
+            <p class="col-3"><strong>YearOfPassing:</strong> {{ selectedAppoint.jobSeeker.yearOfPassing}}</p>
+            <p class="col-3"><strong>Cgpa:</strong> {{ selectedAppoint.jobSeeker.cgpa }}</p>
+          </div>
+          <div class="row">
+            <p class="col-3"><strong>Language:</strong> {{ selectedAppoint.jobSeeker.language }}</p>
+            <p class="col-3"><strong>keySkill:</strong> {{ selectedAppoint.jobSeeker.keySkill }}</p>
+            <p class="col-3"><strong>AreaOfInterest:</strong> {{ selectedAppoint.jobSeeker.areaOfInterest }}</p>
+          </div>
+          <div class="row">
+            <p class="col-3"><strong>Project:</strong> {{ selectedAppoint.jobSeeker.project }}</p>
+            <p class="col-3"><strong>Applied For JobId:</strong> {{selectedAppoint.jobSeeker.job.jobId}}</p>
+            <p class="col-4"><strong>Applied For Job Name:</strong> {{selectedAppoint.jobSeeker.job.jobName}}</p>
+          </div>
+          <div class="row">
+            <p class="col-6"><strong>Date:</strong> {{ selectedAppoint.date }}</p>
+            <p class="col-6"><strong>Location:</strong> {{selectedAppoint.location}}</p>
+          </div>
+          <div>
+            <button class="btn btn-link" (click)="openResume(selectedAppoint)">View Resume</button>
+          </div>
         </div>
-        <div class="row">
-        <p class="col-3"><strong>Language:</strong> {{ selectedAppoint.jobSeeker.language }}</p>
-        <p class="col-3"><strong>keySkill:</strong> {{ selectedAppoint.jobSeeker.keySkill }}</p>
-        <p class="col-3"><strong>AreaOfInterest:</strong> {{ selectedAppoint.jobSeeker.areaOfInterest }}</p>
-        </div>
-        <div class="row">
-        <p class="col-3"><strong>Project:</strong> {{ selectedAppoint.jobSeeker.project }}</p>
-        <p class="col-3"><strong>Applied For JobId:</strong> {{selectedAppoint.jobSeeker.job.jobId}}</p>
-        <p class="col-4"><strong>Applied For Job Name:</strong> {{selectedAppoint.jobSeeker.job.jobName}}</p>
-      </div>
-      <div class="row">
-        <p class="col-6"><strong>Date:</strong> {{ selectedAppoint.date }}</p>
-        <p class="col-6"><strong>Location:</strong> {{selectedAppoint.location}}</p>
-      </div>
-      <div>
-        <button class="btn btn-link" (click)="openResume(selectedAppoint)">View Resume</button>
-      </div>
-      </div>
 
-      <div class="modal-footer">
-      <button type="button" class="btn btn-danger" (click)="closeModal()">Close</button>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" (click)="closeModal()">Close</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
