--- a/NewFirstevaluation/Frontend_Angular/src/app/components/gradmessage/gradmessage.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/gradmessage/gradmessage.component.html
@@ -1,21 +1,21 @@
-
-  
-
+<section>
   <div class="background pt-5">
     <div class="card">
       <div class="card-body mt-3">
-        <h2 class="card-title display-2">Contact Us</h2>
-        <div class="fs-4"><strong>Email: {{ adminEmail }}</strong></div>
-  
+        <h2 class="card-title display-2 fw-bold">Raise Your Query</h2>
+        <div class="fs-4" style="font-size :20%"><strong>Email: {{ adminEmail }}</strong></div>
+
         <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="message" class="form-label">Message</label>
-            <textarea formControlName="message" id="message" cols="30" rows="6" class="form-control"></textarea>
+            <textarea formControlName="message" id="message" cols="30" rows="6" class="form-control"
+              style="border: 1px solid black;"></textarea>
           </div>
-          
+
           <button type="submit" class="btn btn-primary mt-3" [disabled]="!contactForm.valid">Send</button>
         </form>
       </div>
     </div>
   </div>
-  
+
+</section>
