--- a/NewFirstevaluation/Frontend_Angular/src/app/components/admin-dash/admin-dash.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/admin-dash/admin-dash.component.html
@@ -91,16 +91,11 @@
     <!-- Main content -->
 
     <div class="col-md-9 ml-sm-auto col-lg-9 pt-3 px-4">
-      <!-- style=" background-image: url('https://wallpapers.com/images/hd/minimalist-aesthetic-actuary-work-laptop-wtvol12uoktgz31i.jpg'); background-size: cover; background-repeat: no-repeat; backdrop-filter: blur(5px); background-position: center;
-  background-attachment: fixed; width: 100%;
-  height: 100%" -->
-      <!-- Search bar -->
       <div class="input-group mb-3 align-items-stretch">
         <div class="input-group-append ml-auto align-items-stretch">
           <span class="input-group-text align-items-stretch"> Welcome Admin !
             <!-- Admin logo -->
-            <img src="https://icons.veryicon.com/png/o/internet--web/prejudice/user-128.png" alt="Admin Logo"
-              class="admin-logo">
+            <img src="assets/sadaf-image.jpg" class="admin-logo">
           </span>
         </div>
       </div>
