--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.html
@@ -34,6 +34,9 @@
             <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active" (click)="jobsforyou()">Explore Jobs</a>
           </li>
 
+          <li class="nav-item" >
+            <a class="nav-link"  *ngIf="roleIdString?.startsWith('EMP')" routerLink="/gradmessage/{{roleIdString}}" routerLinkActive="active">Contact Us/Notification</a>
+          </li>
 
 
           <!-- Search Jobs -->
