--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.html
@@ -24,6 +24,10 @@
             <a class="nav-link" routerLink="/blogs/{{roleIdString}}" routerLinkActive="active">Blogs</a>
           </li>
 
+          <li class="nav-item" >
+            <a class="nav-link"  *ngIf="roleIdString?.startsWith('GRAD')" routerLink="/gradmessage/{{roleIdString}}" routerLinkActive="active">Contact Us/Notification</a>
+          </li>
+
           <!-- About Us -->
           <li class="nav-item">
             <a class="nav-link" routerLink="/about-us/{{roleIdString}}" routerLinkActive="active">About Us</a>
