--- a/NewFirstevaluation/Frontend_Angular/src/app/jobdescription/jobdescription.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/jobdescription/jobdescription.component.html
@@ -29,6 +29,10 @@
           </li>
 
 
+          <li class="nav-item" >
+            <a class="nav-link"  *ngIf="roleIdString?.startsWith('GRAD')" routerLink="/gradmessage/{{roleIdString}}" routerLinkActive="active">Contact Us/Notification</a>
+          </li>
+
           <!-- About Us -->
           <!-- *ngIf="currentRoute !== '/login'" -->
           <li class="nav-item" >
