--- a/NewFirstevaluation/Frontend_Angular/src/app/joblist/joblist.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/joblist/joblist.component.html
@@ -19,17 +19,14 @@
             <a class="nav-link" routerLink="/gradhome/{{roleIdString}}" routerLinkActive="active">Home</a>
           </li>
 
-
-
-
-
-       
-
-
           <!-- Blog  -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
           <li class="nav-item" >
             <a class="nav-link" routerLink="/blogs/{{roleIdString}}" routerLinkActive="active">Blogs</a>
+          </li>
+
+          <li class="nav-item" >
+            <a class="nav-link"  *ngIf="!(roleIdString?.startsWith('GRAD') || roleIdString?.startsWith('EMP'))" routerLink="/gradmessage/{{roleIdString}}" routerLinkActive="active">Contact Us/Notification</a>
           </li>
 
 
