--- a/NewFirstevaluation/Frontend_Angular/src/app/components/admin-dash/admin-dash.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/admin-dash/admin-dash.component.css
@@ -83,3 +83,18 @@
   color: rgb(250, 248, 248);
   font-weight: bold;
 }
+
+.profilephoto{
+  width:50px;
+  height:50px;
+  position: relative;
+  left: 105%;
+  border-radius: 5px;
+}
+
+.card{
+  width: 10%;
+  height: 100px;
+  position: relative;
+  left: 100%;
+}
