--- a/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.html
@@ -2,13 +2,9 @@
   <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
     <div class="container-fluid">
       <!-- Centered brand -->
-      <a class="navbar-brand mx-auto" routerLink="/home">RecruitHub</a>
-
+      <img src="assets/ors-logo.png" alt="logo" style="height: 55px; width:190px; margin-right: 10px;">
       <!-- Toggler button for small screens -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      
 
       <!-- Navigation items -->
       <div class="collapse navbar-collapse" id="navbarNav">
